fix and implementing group-selector

--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button class="button" id="kuning">Click Me!</button>
-    <button class="button" id="hitam">No, Click Me!</button>
+    <button class="kuning">Click Me!</button>
+    <button class="hitam">No, Click Me!</button>
   </body>
 </html>
