--- a/foundations/04-chaining-selectors/index.html
+++ b/foundations/04-chaining-selectors/index.html
@@ -13,7 +13,7 @@
       <img class="avatar proportioned" src="./pexels-katho-mutodo-8434791.jpg" alt="Woman with glasses">
       <img class="avatar distorted" src="./pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised expression">
     </div>
-    <!-- Use the classes ABOVE this line -->
+    <!-- Use the classes ABOVE this lines -->
     <div>
       <img class="original proportioned" src="./pexels-katho-mutodo-8434791.jpg" alt="Woman with glasses">
       <img class="original distorted" src="./pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised expression">
